@@ -48,6 +48,8 @@ static PHP_MUTEX		sqlite_access;
 #endif
 
 #if defined(HAVE_ORACLE)
+static void	OCI_DBclean_result(DB_RESULT result);
+
 static const char	*zbx_oci_error(sword status, sb4 *err)
 {
 	static char	errbuf[512];
@@ -320,6 +322,8 @@ int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *d
 #endif
 	memset(&oracle, 0, sizeof(oracle));
 
+	zbx_vector_ptr_create(&oracle.db_results);
+
 	/* connection string format: [//]host[:port][/service name] */
 
 	if ('\0' != *host)
@@ -562,6 +566,19 @@ void	zbx_db_close()
 		conn = NULL;
 	}
 #elif defined(HAVE_ORACLE)
+	if (0 != oracle.db_results.values_num)
+	{
+		int	i;
+
+		zabbix_log(LOG_LEVEL_WARNING, "cannot process queries: database is closed");
+
+		for (i = 0; i < oracle.db_results.values_num; i++)
+		{
+			/* deallocate all handles before environment is deallocated */
+			OCI_DBclean_result(oracle.db_results.values[i]);
+		}
+	}
+
 	/* deallocate statement handle */
 	if (NULL != oracle.stmthp)
 	{
@@ -581,17 +598,20 @@ void	zbx_db_close()
 		oracle.errhp = NULL;
 	}
 
-	if (NULL != oracle.envhp)
-	{
-		OCIHandleFree((dvoid *)oracle.envhp, OCI_HTYPE_ENV);
-		oracle.envhp = NULL;
-	}
-
 	if (NULL != oracle.srvhp)
 	{
 		OCIHandleFree(oracle.srvhp, OCI_HTYPE_SERVER);
 		oracle.srvhp = NULL;
 	}
+
+	if (NULL != oracle.envhp)
+	{
+		/* delete the environment handle, which deallocates all other handles associated with it */
+		OCIHandleFree((dvoid *)oracle.envhp, OCI_HTYPE_ENV);
+		oracle.envhp = NULL;
+	}
+
+	zbx_vector_ptr_destroy(&oracle.db_results);
 #elif defined(HAVE_POSTGRESQL)
 	if (NULL != conn)
 	{
@@ -1229,6 +1249,7 @@ error:
 	}
 #elif defined(HAVE_ORACLE)
 	result = zbx_malloc(NULL, sizeof(ZBX_OCI_DB_RESULT));
+	zbx_vector_ptr_append(&oracle.db_results, result);
 	memset(result, 0, sizeof(ZBX_OCI_DB_RESULT));
 
 	err = OCIHandleAlloc((dvoid *)oracle.envhp, (dvoid **)&result->stmthp, OCI_HTYPE_STMT, (size_t)0, (dvoid **)0);
@@ -1609,8 +1630,31 @@ DB_ROW	zbx_db_fetch(DB_RESULT result)
 #elif defined(HAVE_MYSQL)
 	return mysql_fetch_row(result);
 #elif defined(HAVE_ORACLE)
+	if (NULL == result->stmthp)
+		return NULL;
+
 	if (OCI_NO_DATA == (rc = OCIStmtFetch2(result->stmthp, oracle.errhp, 1, OCI_FETCH_NEXT, 0, OCI_DEFAULT)))
 		return NULL;
+
+	if (OCI_SUCCESS != rc)
+	{
+		if (OCI_SUCCESS != (rc = OCIErrorGet((dvoid *)oracle.errhp, (ub4)1, (text *)NULL,
+				&errcode, (text *)errbuf, (ub4)sizeof(errbuf), OCI_HTYPE_ERROR)))
+		{
+			zabbix_errlog(ERR_Z3006, rc, zbx_oci_error(rc, NULL));
+			return NULL;
+		}
+
+		switch (errcode)
+		{
+			case 1012:	/* ORA-01012: not logged on */
+			case 2396:	/* ORA-02396: exceeded maximum idle time */
+			case 3113:	/* ORA-03113: end-of-file on communication channel */
+			case 3114:	/* ORA-03114: not connected to ORACLE */
+				zabbix_errlog(ERR_Z3006, errcode, errbuf);
+				return NULL;
+		}
+	}
 
 	for (i = 0; i < result->ncolumn; i++)
 	{
@@ -1657,26 +1701,6 @@ DB_ROW	zbx_db_fetch(DB_RESULT result)
 		}
 
 		result->values[i][amount] = '\0';
-	}
-
-	if (OCI_SUCCESS == rc)
-		return result->values;
-
-	if (OCI_SUCCESS != (rc = OCIErrorGet((dvoid *)oracle.errhp, (ub4)1, (text *)NULL,
-			&errcode, (text *)errbuf, (ub4)sizeof(errbuf), OCI_HTYPE_ERROR)))
-	{
-		zabbix_errlog(ERR_Z3006, rc, zbx_oci_error(rc, NULL));
-		return NULL;
-	}
-
-	switch (errcode)
-	{
-		case 1012:	/* ORA-01012: not logged on */
-		case 2396:	/* ORA-02396: exceeded maximum idle time */
-		case 3113:	/* ORA-03113: end-of-file on communication channel */
-		case 3114:	/* ORA-03114: not connected to ORACLE */
-			zabbix_errlog(ERR_Z3006, errcode, errbuf);
-			return NULL;
 	}
 
 	return result->values;
@@ -1768,8 +1792,7 @@ void	IBM_DB2free_result(DB_RESULT result)
 	zbx_free(result);
 }
 #elif defined(HAVE_ORACLE)
-/* in zbxdb.h - #define DBfree_result   OCI_DBfree_result */
-void	OCI_DBfree_result(DB_RESULT result)
+static void	OCI_DBclean_result(DB_RESULT result)
 {
 	if (NULL == result)
 		return;
@@ -1796,7 +1819,30 @@ void	OCI_DBfree_result(DB_RESULT result)
 	}
 
 	if (result->stmthp)
+	{
 		OCIHandleFree((dvoid *)result->stmthp, OCI_HTYPE_STMT);
+		result->stmthp = NULL;
+	}
+}
+
+/* in zbxdb.h - #define DBfree_result   OCI_DBfree_result */
+void	OCI_DBfree_result(DB_RESULT result)
+{
+	int i;
+
+	if (NULL == result)
+		return;
+
+	OCI_DBclean_result(result);
+
+	for (i = 0; i < oracle.db_results.values_num; i++)
+	{
+		if (oracle.db_results.values[i] == result)
+		{
+			zbx_vector_ptr_remove_noorder(&oracle.db_results, i);
+			break;
+		}
+	}
 
 	zbx_free(result);
 }
